update conf